--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
     <h1>Login</h1>
     <form action="/login" method="post">
       <label for="email">Email:</label><br />
-      <input name="email" /><br />
+      <input id="email" name="email" /><br />
       <label for="password">Password:</label><br />
-      <input name="password" type="password" /><br />
+      <input id="password" name="password" type="password" /><br />
       <button type="submit">Login</button>
     </form>
   </body>
